fix overflow on cards

--- a/components/collection.module.scss
+++ b/components/collection.module.scss
@@ -16,7 +16,7 @@
 }
 
 .cards{
-  margin-top: 16px;
+  padding-top: 16px;
   display: flex;
   overflow-x: scroll;
   overflow-y: visible;
